--- a/Throw/ClientApp/package.json
+++ b/Throw/ClientApp/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.2.1",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "react": "^16.7.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.7.0",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.3"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
