--- a/.gitignore
+++ b/.gitignore
@@ -180,7 +180,6 @@ ClientBin/
 orleans.codegen.cs
 
 /node_modules
-
 # RIA/Silverlight projects
 Generated_Code/
 
@@ -229,3 +228,4 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+Throw/ClientApp/node_modules/
