--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -21,7 +21,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets"
+              "src/assets",
+              { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" }
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
