--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "ngx-monaco-editor": "^6.0.0",
+    "npm-install-all": "^1.1.21",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "tslib": "^1.10.0",
