Added migrations for creating database model

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,16 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "Data": {
+    "ThrowDatabase": {
+      "ConnectionString": "Server=localhost;port=3306;Database=throw;user=root;password=Juventus94;"
+    },
+    "ThrowDatabaseIdentity": {
+      "ConnectionString": "Server=localhost;port=3306;Database=throwIdentity;user=root;password=Juventus94;"
+    }
+  }
+
 }
