--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,10 @@
 
   "Data": {
     "ThrowDatabase": {
-      "ConnectionString": "Server=localhost;port=3306;Database=throw;user=root;password=Juventus94;"
+      "ConnectionString": "Server=localhost;port=3306;Database=throw;user=root;password=root;"
     },
     "ThrowDatabaseIdentity": {
-      "ConnectionString": "Server=localhost;port=3306;Database=throwIdentity;user=root;password=Juventus94;"
+      "ConnectionString": "Server=localhost;port=3306;Database=throwIdentity;user=root;password=root;"
     }
   }
 
