--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^8.0.0",
     "@ngrx/store": "^8.0.0",
     "@ngrx/store-devtools": "^8.0.0",
+    "angular5-social-login": "^1.0.9",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
