--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,16 +21,20 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/platform-server": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@aspnet/signalr": "^1.1.4",
     "@ngrx/store": "^8.0.0",
     "@ngrx/store-devtools": "^8.0.0",
     "angular5-social-login": "^1.0.9",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-monaco-editor": "^6.0.0",
     "npm-install-all": "^1.1.21",
     "popper.js": "^1.14.3",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.3",
     "rxjs": "^6.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
