--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@aspnet/signalr": "^1.1.4",
     "@ngrx/store": "^8.0.0",
     "@ngrx/store-devtools": "^8.0.0",
+    "angular-6-social-login": "^1.1.1",
     "angular5-social-login": "^1.0.9",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
