--- a/Throw.csproj
+++ b/Throw.csproj
@@ -27,8 +27,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\models\socialusers.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="ActiveProjectSnapshots\" />
     <Folder Include="Python\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\models\socialusers.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
